--- a/login_frame.css
+++ b/login_frame.css
@@ -33,6 +33,6 @@
     margin-bottom: 1.2em !important;
 }
 #loginPage {
-  background: url(https://images.weserv.nl/?url=https://i.imgur.com/9vL4iNf.png) !important; 
+  background: url(https://picdl.sunbangyan.cn/2023/10/16/696512da31c96c2d1a5c0d7fea3538c5.png) !important; 
   background-size: cover !important;
 }
